crates/keron-lang/tests/corpus/errors/check/nullable_in_interpolation.keron
val maybe_name: String? = "alice"

val greeting: String = "hello ${maybe_name}"
